2009-01-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/prefs.c, src/stash.c, src/keyfile.c:
   Fix using prefs dialog editor & files tab spin button values when
   they've just been edited and Alt-O is used to close the dialog
   without moving the focus.
 * src/prefs.c:
   Fix remaining spin buttons in the prefs dialog (closes #2492317).


2009-01-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * tagmanager/basic.c:
   Fix some bugs in parsing FreeBasic code (#2489605).
 * src/build.c:
   Don't remove leading whitespace from compiler output for compilers
   like gfortran which use space for indentation in error messages.
 * data/filetypes.tcl:
   Update keyword list for Tcl/Tk 8.5.


2009-01-04  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * wscript, THANKS, data/filetype_extensions.conf, src/templates.c,
   scintilla/KeyWords.cxx, scintilla/LexAda.cxx, scintilla/Makefile.am,
   scintilla/makefile.win32, src/about.c, src/editor.c, src/filetypes.c,
   src/filetypes.h, src/highlighting.c, src/plugindata.h:
   Add filetype Ada (closes #1811306 and #1765830,
   patch by Philipp Gildein, thanks).
 * src/filetypes.c, data/filetype_extensions.conf:
   Add *.desktop as extension for the Conf filetype.
 * *.*:
   Update copyright information
 * plugins/saveactions.c:
   Don't write the default filetype to the config if it isn't set.


2009-01-03  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/support.h:
   Prevent compile errors in plugins when GETTEXT_PACKAGE is not
   defined.
 * tagmanager/make.c:
   Fix crash in Makefile parser when trying to read defines.


2009-01-03  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, src/keybindings.c, src/geanyobject.c,
   src/geanyobject.h, src/geany.h, src/callbacks.c, src/callbacks.h,
   geany.glade:
   Fix not switching to 2nd last used document when the last used
   document has been closed (#1945162).
 - Code changes: