@@ -57,7 +57,7 @@ gchar *main_get_argv_filename(const gchar *filename);
 
 void main_quit(void);
 
-gboolean main_handle_filename(gchar *locale_filename);
+gboolean main_handle_filename(const gchar *locale_filename);
 
 void main_reload_configuration(void);
 
