@@ -321,3 +321,6 @@
 /* Define if you want to detect a running instance */
 #define HAVE_SOCKET 1
 
+/* Define if GIO should be used, need GLib 2.16.x or newer */
+#define HAVE_GIO 1
+
